--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ p {
     margin: 0 0 10px;
 }
 
+
 /* Webkit 
 ==============*/
 ::-webkit-scrollbar {
@@ -31,7 +32,6 @@ p {
     background-color: rgb(155, 153, 153);
     border-radius: 8px;
   }
-
 /* Container
 ===============*/
 .container {
@@ -57,12 +57,11 @@ p {
 .header__inner {
     display: flex;
     justify-content: right ;
-    padding: 25px 150px;
-    position: fixed;
+    padding: 25px;
+    position: relative;
     top: 0;
     left: 0;
     width: 100%;
-    backdrop-filter: blur(10px);
 }
 
 
@@ -74,6 +73,7 @@ p {
     font-weight: 700;
     text-transform: uppercase;
     display: flex;
+    
       
     
 }
@@ -94,6 +94,49 @@ p {
 .nav__link:hover  {
     color: #40ff00;
 }
+
+.hamburger {
+    position: relative;
+    display: none;
+    vertical-align: middle;
+    cursor: pointer;
+    width: 40px;
+    height: 40px;
+    border: 1px solid #ffffff;
+    background: #0b0b0b;
+    padding: 5px;
+    border-radius: 6px; 
+    
+    
+}
+    
+  
+  .btn__hamb {
+    position: relative;
+    display: block;
+    width: 100%;
+    height: 3px;
+    background: #fdfffd;
+    cursor: pointer; 
+}
+    .btn__hamb div {
+      width: 100%;
+      height: 100%; 
+    }
+    .btn__hamb:before, .btn__hamb:after {
+      content: "";
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      left: 0;
+      background: #ffffff; 
+    }
+    .btn__hamb:before {
+      top: -8px; 
+    }
+    .btn__hamb:after {
+      top: 8px; 
+    }
 
 
 
@@ -654,7 +697,13 @@ p {
         height: 300px;
     }
     
+    .nav {
+        display: none;
+    }
 
+    .hamburger {
+        display: inline-block;
+    }
       
 
 
@@ -672,7 +721,6 @@ p {
         font-size: 25px;
       }
     
-
 
       /* Footer */
       .footer__inner {
